2005-03-07 22:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added code to make the window of the widget 
	selected, the key window.  This helps correct Bug#12224.
	* Palettes/1Windows/GormNSWindow.m: Added method canBecomeKeyWindow
	to guarantee that it returns YES.

2005-03-06 06:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Added FAQ concerning font modification.

2005-03-05 23:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added new class.
	* GormImageEditor.m: Refactored all of the code into the
	new parent.  Implemented only those methods needed.
	* GormPrivate.h: Changed hierarchy of GormImageEditor and 
	GormSoundEditor to have GormResourceEditor as their parent
	* GormResourceEditor.m:  New parent for sound/image editors.
	* GormSoundEditor.m: Refactored all of the code into the 
	new parent class.  Implemented needed methods.

2005-03-04 04:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m
	* GormPrivate.h: Added declaration for new method.
	* GormSoundEditor.m: Streamlined drag/drop code in image/sound
	editors.

2005-03-01 21:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added new files.
	* GormDocument.m: Calls new resource methods.
	* GormImageEditor.m: Calls new resource methods.
	* GormImage.[hm]: Now inherits from GormResource.
	* GormResource.[hm]: Added.  New abstract resource class which
	implements IBResourceFiles. 
	* GormSoundEditor.m: Calls new methods.
	* GormSound.[hm]: Now inherits from GormResource.
	* GormSoundInspector.m: Calls new methods.

2005-02-28 20:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilePrefsManager.m
	* GormInfo.plist: Bump application version in CVS.

2005-02-28 19:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.9.2
	
2005-02-27 12:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Added a question to the FAQ.
