@@ -29,6 +29,7 @@
 #include <AppKit/AppKit.h>
 #include <Foundation/Foundation.h>
 #include <GNUstepGUI/GSNibTemplates.h>
+#include <InterfaceBuilder/InterfaceBuilder.h>
 
 @class GormClassManager, GormClassEditor, GormObjectProxy, GormFilesOwner;
 
